--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,7 @@
 					<button class="btn btn-primary" id="calculateButton">Calculate</button>
 				</div>
 			</div>
+		</div>
 		
 		<script src="popup.js"></script>
 	</body>
