Update requirements for parsing

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
 			<div class="row mb-3 mt-3" style="text-align: center">
 				<div class="col">
 					<h4 class="">Press the button below to calculate the average grade.</h4>
-					<p>Make sure your Transcript of Records table on the "Leistungen" page is fully expanded and your page language is set to German.</p>
+					<p>Make sure your Transcript of Records table on the "Leistungen" page is fully expanded, your page language is set to German, and you are viewing the Desktop version of the website.</p>
 					<button class="btn btn-primary" id="calculateButton">Calculate</button>
 				</div>
 			</div>
